--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,12 @@ dependencies:
   provide: ^1.0.2
   fluttertoast: ^3.1.0
   fluro: ^1.5.1
-  #  flutter_html: ^0.10.4
-  flutter_html:
-    git: https://github.com/Sub6Resources/flutter_html.git
+#  flutter_html: ^0.10.4
+  flutter_html: ^0.9.6
+#  flutter_html:
+#    git: https://github.com/Sub6Resources/flutter_html.git
+  sqflite: ^1.1.0
+  shared_preferences: ^0.5.1
 
 dev_dependencies:
   flutter_test:
