--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
 #  flutter_html:
 #    git: https://github.com/Sub6Resources/flutter_html.git
   sqflite: ^1.1.0
-  shared_preferences: ^0.5.1
+  shared_preferences: ^0.5.3+4
 
 dev_dependencies:
   flutter_test:
